--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "flowers",
+  "name": "project",
   "version": "1.0.0",
-  "description": "",
   "main": "Gruntfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "author": "Tamtamlg",
   "license": "ISC",
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-browser-sync": "^2.2.0",
     "grunt-combine-media-queries": "^1.0.20",
-    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-cssmin": "^2.2.0",
     "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-include-replace": "^4.0.1",
-    "grunt-includes": "^1.0.0",
-    "grunt-replace": "^1.0.1",
-    "load-grunt-tasks": "^3.5.0"
-  }
+    "grunt-gh-pages": "^2.0.0",
+    "grunt-include-replace": "^5.0.0",
+    "load-grunt-tasks": "^3.5.2"
+  },
+  "dependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tamtamlg/start.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Tamtamlg/start/issues"
+  },
+  "homepage": "https://github.com/Tamtamlg/start#readme",
+  "description": ""
 }
