--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Tamtamlg",
   "license": "ISC",
   "devDependencies": {
+    "csscomb": "^4.2.0",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-browser-sync": "^2.2.0",
