add html prettify

--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
     "grunt-combine-media-queries": "^1.0.20",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.2.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-csscomb": "^3.1.1",
-    "grunt-gh-pages": "^2.0.0",
     "grunt-include-replace": "^5.0.0",
-    "grunt-replace": "^1.0.1",
+    "grunt-prettify": "^0.4.0",
     "grunt-sass": "^2.0.0",
     "grunt-svgstore": "^1.0.0",
     "load-grunt-tasks": "^3.5.2"
